<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/defaultSpacing"
    tools:context=".ui.plugins.transitobject.TransitObjectFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/classIdTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/classId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Class ID"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/objectIdTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classIdTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/objectId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Object ID"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/originShortTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/transitType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/objectIdTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/originShort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="3"
            android:inputType="textCapCharacters"
            android:hint="@string/origin_short" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/transitType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/originTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/objectIdTextInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/destinationShortTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transitType"
        app:layout_constraintTop_toBottomOf="@id/objectIdTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/destinationShort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="3"
            android:hint="@string/destination_short" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/originTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/destinationTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/originShortTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/destinationTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/originTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/originShortTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destination" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passengerTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/originTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passengerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passenger_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/seatTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passengerTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/seatNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seat" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/barcodeTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seatTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barcode_value" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_object"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeTextInputLayout" />

    <ImageButton
        android:id="@+id/saveToGooglePay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_save_to_google_pay"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/addObject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcodeTextInputLayout"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
